force-app/main/default/objects/Contact/fields/Broker_Company__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company__c</fullName>
    <label>Broker Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avison Young</fullName>
            </value>
            <value>
                <fullName>Beta Retail</fullName>
            </value>
            <value>
                <fullName>CBRE</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Commercial</fullName>
            </value>
            <value>
                <fullName>Colliers</fullName>
            </value>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>Continental Development Corporation</fullName>
            </value>
            <value>
                <fullName>Cresa</fullName>
            </value>
            <value>
                <fullName>Cushman &amp; Wakefield</fullName>
            </value>
            <value>
                <fullName>Highland Partners</fullName>
            </value>
            <value>
                <fullName>Industry Partners</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>JLL</fullName>
            </value>
            <value>
                <fullName>Kidder Matthews</fullName>
            </value>
            <value>
                <fullName>Lee &amp; Associates</fullName>
            </value>
            <value>
                <fullName>Lincoln Property Company</fullName>
            </value>
            <value>
                <fullName>Madison Partners</fullName>
            </value>
            <value>
                <fullName>Medical Asset Management</fullName>
            </value>
            <value>
                <fullName>NAI Capital</fullName>
            </value>
            <value>
                <fullName>Newmark Knight Frank</fullName>
            </value>
            <value>
                <fullName>Pike Properties</fullName>
            </value>
            <value>
                <fullName>PMRG</fullName>
            </value>
            <value>
                <fullName>RE/Max Commercial</fullName>
            </value>
            <value>
                <fullName>rsfLA</fullName>
            </value>
            <value>
                <fullName>Savills Studley</fullName>
            </value>
            <value>
                <fullName>Segal Commercial Property</fullName>
            </value>
            <value>
                <fullName>SVN</fullName>
            </value>
            <value>
                <fullName>The Klabin Company</fullName>
            </value>
            <value>
                <fullName>Tishman Speyer</fullName>
            </value>
            <value>
                <fullName>Westpac Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>