force-app/main/default/objects/Contact/fields/Broker_Company_formula__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company_formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Account.Id ,  Account.Name ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage</label>
    <type>Text</type>
</CustomField>