force-app/main/default/objects/Contact/fields/Broker_Id__c.field-meta.xml
<CustomField>
    <fullName>Broker_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Id</label>
    <type>Text</type>
</CustomField>