force-app/main/default/objects/Contact/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <label>Business</label>
    <type>Phone</type>
</CustomField>