force-app/main/default/objects/Contact/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <inlineHelpText>If no LinkedIn page, write &quot;None&quot;</inlineHelpText>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>