force-app/main/default/objects/Contact/fields/Private_Record__c.field-meta.xml
<CustomField>
    <fullName>Private_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Record</label>
    <type>Checkbox</type>
</CustomField>