force-app/main/default/objects/Contact/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <inlineHelpText>If no Twitter account, write &quot;None&quot;</inlineHelpText>
    <label>Twitter URL</label>
    <type>Url</type>
</CustomField>