force-app/main/default/objects/Contact/fields/Website_Profile__c.field-meta.xml
<CustomField>
    <fullName>Website_Profile__c</fullName>
    <inlineHelpText>If no website, write &quot;None&quot;</inlineHelpText>
    <label>Website Profile</label>
    <type>Url</type>
</CustomField>